:wrench: Optimize HPACK codec and add NIO scatter/gather support
- Implement Huffman encoding and replace linear scans with O(1) hash lookups in `HpackCodec` dynamic table
- Add handling for sensitive headers, enforce max header count limits, and fix integer overflow in HPACK decoding
- Introduce default scatter/gather `ByteBuffer` methods in `Conduit` with strict asynchronous state validation
- Refactor `HttpCall` to compute the dispatch key eagerly and release operation references after execution
- Add direct read buffer, reentrant lock, and atomic close flag to `Ingress` for optimized socket reading